name:                geos

version:             0.1.0.0

-- synopsis:            

-- description:         

license:             MIT

license-file:        LICENSE

author:              Peter France

maintainer:          pfrance@gmail.com

category:            GIS

build-type:         Custom 
Extra-source-files:  cbits/noticehandlers.h
cabal-version:       >=1.18.0

Library
  Includes: geos_c.h
  Extra-libraries: geos_c
  c-sources:           cbits/noticehandlers.c
  include-dirs:        cbits
  GHC-options: -Wall 
  build-depends:       
      base >=4.7 && <4.8
    , bytestring 
    , vector
    , transformers >= 0.4
    , mtl >= 2.0
  build-tools: hsc2hs
  exposed-modules:
      GEOS.Topology
    , GEOS.Geometry
    , GEOS.Types
    , GEOS.Serialize
    , GEOS.Buffer
    , GEOS.Raw.Base
    , GEOS.Raw.CoordSeq
    , GEOS.Raw.Geometry
    , GEOS.Raw.Serialize
    , GEOS.Raw.Topology
    , GEOS.Raw.Buffer
  other-modules:
    GEOS.Raw.Internal
  hs-source-dirs:      src
  frameworks: GEOS
  Extensions:
    LambdaCase

  default-language:    Haskell2010
