name:                geos

version:             0.1.0.0

synopsis:  Bindings for GEOS.          

description:   This is a Haskell binding to Geos, the open-source geometry library, which includes geometry types, predicate functions and other operations, spatially indexed geometries, and parsers for WKB and WKT formats.

license:             MIT

license-file:        LICENSE

author:              Peter France

maintainer:          pfrance@gmail.com

category:            GIS

build-type:         Custom 
Extra-source-files:  cbits/noticehandlers.h
cabal-version:       >=1.18.0

Library
  Includes: geos_c.h
  Extra-libraries: geos_c
  cc-options: -fPIC
  c-sources:           cbits/noticehandlers.c
  include-dirs:        cbits
  GHC-options: -Wall 
  build-depends:       
      base >= 4.7 
    , bytestring 
    , vector
    , transformers >= 0.4
    , mtl >= 2.0
  build-tools: hsc2hs
  exposed-modules:
      GEOS.Topology
    , GEOS.Geometry
    , GEOS.Types
    , GEOS.Serialize
    , GEOS.Buffer
    , GEOS.Prepared
    , GEOS.Raw.Base
    , GEOS.Raw.CoordSeq
    , GEOS.Raw.Geometry
    , GEOS.Raw.Serialize
    , GEOS.Raw.Topology
    , GEOS.Raw.Buffer
    , GEOS.Raw.Prepared
    , GEOS.Raw.Internal
  hs-source-dirs:      src
  frameworks: GEOS
  default-extensions:
      LambdaCase
    , GADTs
    , ExistentialQuantification 
    , DeriveDataTypeable
    , RankNTypes
    , DataKinds
    , KindSignatures
    --, ScopedTypeVariables

  default-language:    Haskell2010
test-suite test
  type:
    exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs: tests src
  main-is: Main.hs
  build-depends:
      base >= 4.7 
    , bytestring >= 0.10.0
    , vector >= 0.10
    , mtl >= 2.1
    , geos >= 0.1
    , hspec >= 2.2
  default-extensions:
      LambdaCase
    , GADTs
    , ExistentialQuantification 
    , DeriveDataTypeable
    , RankNTypes
    , DataKinds
    , KindSignatures   

source-repository head
  type:     git
  location: https://github.com/ewestern/geos 
